# billing-service

./: .gitignore  Makefile  main.py  pyproject.toml
billing_service/domain/wallet/: aggregate_root.py  command_handler.py  commands.py  events.py  repository.py  wallet.py
billing_service/domain/wallet/commands/: add_credits_to_balance.py  create_wallet.py  handlers.py  remove_credits_from_balance.py
billing_service/domain/wallet/queries/: get_wallet.py  handlers.py
billing_service/domain/wallet/repository/: in_memory.py
billing_service/domain/wallet/routes/: wallet.py  wallet_created.py
tests/: test_wallet.py
