[tool.poetry]
name = "billing-service"
version = "0.1.0"
description = ""
authors = ["Joshua-Luke Bevan <63861228+jbevan4@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "billing_service"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
black = "^23.3.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "ANN", "B", "I"]
ignore = ["B008"]
fixable = ["ALL"]
target-version = "py311"
show-source = true
ignore-init-module-imports = true
src = ["fastapi_project", "tests"]

[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 5